@@ -39,8 +39,6 @@
    be violating Notch's "do not distribute" rule probably.  Will have to see
    if they'd be okay with that...
  
- * Visualization for slime spawning
- 
  * And, of course, completing the mod support - UI to select extra mod files,
    extra YAML attributes required to read things in.  "reserved" to mark additional
    textures that the renderer pulls in, "secondary" perhaps, for portal (so that
@@ -69,3 +67,7 @@
  * Pull the grass colorization color from a point on misc/grasscolor.png
 
  * Make sure exception reporting stuff works okay on the new texfile stuff
+
+ * I feel like there should be a disclaimer somewhere when slime-spawn chunk
+   highlighting is enabled, to make sure folks are aware of the fact that
+   the algorithm may change depending on the version of Minecraft in use.
